# auto_parking_capston

package_all/: .gitignore  README.md  run.launch  run_origin.launch  wave_topic.xlsx
package_all/aimlab/: josm_csv.py
package_all/aimlab/astar_map/: CMakeLists.txt  README.md  package.xml
package_all/aimlab/astar_map/launch/: astar_map.launch
package_all/aimlab/astar_map/map/: aitest_trajectory.osm  campus_trajectory.osm  campus_trajectory_copy.osm  map_reference_coordinate.csv  map_reference_coordinate_cap.csv  test.osm  test_trajectory.osm  test_trajectory1.osm  test_trajectory_rotated_save.osm  trajectory.csv  trajectory_real.osm  trajectory_rotate.osm  trajectory_rotate_change.osm  trajectory_wgs84.csv  wave_trajectory_0405.osm  wave_trajectory_0405_fix.osm
package_all/aimlab/astar_map/map/capstone/: map_reference_coordinate.csv
package_all/aimlab/astar_map/msg/: robot_to_server.msg
package_all/aimlab/astar_map/rviz/: osm_config.rviz
package_all/aimlab/astar_map/scripts/: astar_map_node.py  astar_map_node_origin.py
package_all/aimlab/auto_parking/: CMakeLists.txt  package.xml
package_all/aimlab/auto_parking/action/: ParkIn.action
package_all/aimlab/auto_parking/launch/: parking_all.launch  parking_cam.launch
package_all/aimlab/auto_parking/msg/: ParkingSlot.msg  ParkingSlotArray.msg
package_all/aimlab/auto_parking/nodes/: cmd_vel_mux.py  parking_controller_node.py  parking_debug_viz.py  parking_line_detector_node.py  parking_manager_node.py  parking_perception_node.py  parking_planner_node.py  parking_slots_logger.py  parking_tape_filter_node.py  parking_vision_detector_node.py  points_frame_relay.py  slot_recorder.py
package_all/aimlab/auto_parking/rviz/: parking_debug.rviz
package_all/aimlab/dynamic_window_approach/: CMakeLists.txt  package.xml
package_all/aimlab/dynamic_window_approach/launch/: dynamic_window_approach.launch
package_all/aimlab/dynamic_window_approach/scripts/: dynamicwindowapproach.py  dynamicwindowapproach_best.py  dynamicwindowapproach_new.py  dynamicwindowapproach_origin.py  new2.py  test2.py  yaw_rosbag.py
package_all/aimlab/lio-localizer/: CMakeLists.txt  README.md  package.xml
package_all/aimlab/lio-localizer/config/: params-kitti.yaml  params-robot_scout.yaml  params-robot_wave.yaml
package_all/aimlab/lio-localizer/include/: lidarFactor.hpp  utility.h
package_all/aimlab/lio-localizer/launch/: run-kitti.launch  run-robot.launch  run_with_local_planner.launch
package_all/aimlab/lio-localizer/launch/include/: module_rviz.launch
package_all/aimlab/lio-localizer/launch/include/config/: rviz.rviz  rviz_with_local_planner.rviz
package_all/aimlab/lio-localizer/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapLocalization.cpp
package_all/aimlab/lio-sam/: CMakeLists.txt  README.md
package_all/aimlab/lio-sam/config/: params-kitti.yaml  params-robot.yaml  params-robot_wave.yaml
package_all/aimlab/lio-sam/include/: UTM.hpp  utility.h
package_all/aimlab/lio-sam/launch/: run-kitti.launch  run-robot.launch
package_all/aimlab/lio-sam/launch/include/config/: rviz.rviz
package_all/aimlab/lio-sam/scripts/: gps_factor_track.py  gps_track.py
package_all/aimlab/lio-sam/src/: UTM.cpp  imuPreintegration.cpp  mapOptmization.cpp  mapOptmization_origin.cpp
package_all/aimlab/local-planner/: CMakeLists.txt  README.md  package.xml
package_all/aimlab/local-planner/include/local_planner/: global_trajectory_planner.h
package_all/aimlab/local-planner/launch/: global_trajectory_planner.launch
package_all/aimlab/local-planner/src/: local_planner_node.cpp
package_all/aimlab/local-planner/src/local_planner/: global_trajectory_planner.cpp
package_all/aimlab/parking_occupancy/: CMakeLists.txt  package.xml
package_all/aimlab/parking_occupancy/config/: slots.yaml  slots_b1.yaml
package_all/aimlab/parking_occupancy/launch/: parking_occupancy.launch
package_all/aimlab/parking_occupancy/nodes/: fixed_parking_occupancy.py  slot_recorder.py
package_all/aimlab/simple_path_publisher/: CMakeLists.txt  package.xml
package_all/aimlab/simple_path_publisher/launch/: simple_path_publisher.launch
package_all/aimlab/simple_path_publisher/scripts/: simple_path_publisher.py
package_all/wave/: CMakeLists.txt  package.xml
package_all/wave/msg/: server_to_robot.msg
package_all/wave/scripts/: campus_server_send.py  fix_web_publisher.py  robot_announce.py  robot_send.py  robot_send_test.py  robotdash_announce.sh  server_to_robot_msg_test.py  ssh_tunnel.sh  wave_topic.py  wave_topic_udp.py
