<?xml version="1.0"?>
<package format="2">
  <name>parking_occupancy</name>
  <version>0.0.1</version>
  <description>Fixed parking slots occupancy checker (LiDAR-based or dummy)</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <export/>
</package>
